RSL-58: add contribution content for card student

--- a/src/components/Student/Student.module.scss
+++ b/src/components/Student/Student.module.scss
@@ -67,6 +67,16 @@
     width: 30px;
   }
 
+  &__contribution {
+    height: 105px;
+    padding: 0 10px;
+    text-align: justify;
+  }
+
+  &__contribution-void {
+    height: 0;
+  }
+
   &__img-git {
     background-size: cover;
   }
