--- a/src/pages/AudioCallPage/AudioCallPage.module.scss
+++ b/src/pages/AudioCallPage/AudioCallPage.module.scss
@@ -143,6 +143,33 @@
   }
 }
 
+.AudioCallPage__result {
+  font-family: 'Roboto', sans-serif;
+  font-size: 25px;
+  font-weight: 100;
+
+  &-home {
+    border: 1px solid;
+    border-radius: 4px;
+    color: rgb(148, 20, 14);
+    font-size: 19px;
+
+    margin: 30px 0;
+
+    padding: 3px 10px;
+    transition: 0.3s;
+    user-select: none;
+  }
+
+  &-home:hover {
+    //opacity: 0.3;
+    background-color: rgb(148, 20, 14);
+    color: #fff;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+}
+
 .Block--hide {
   display: none;
   opacity: 0;
