--- a/src/pages/AudioCallPage/AudioCallPage.module.scss
+++ b/src/pages/AudioCallPage/AudioCallPage.module.scss
@@ -1,14 +1,11 @@
 .AudioCallPage {
   align-items: center;
-
-  //background: linear-gradient(#e66465, #9198e5);
-  background-color: #fff;
-
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 91vh;
   justify-content: center;
-  position: absolute;
+
+  transition: 0.3s;
   width: 100%;
 
   &--correct {
@@ -37,9 +34,9 @@
     transition: 0.3s;
   }
 
-  &-audio {
-    margin-bottom: 50px;
-  }
+  //&-audio {
+  //
+  //}
 
   &-image {
     border-radius: 50%;
@@ -49,7 +46,7 @@
 
   &-translate {
     font-family: 'Roboto', sans-serif;
-    font-size: 23px;
+    font-size: 25px;
     font-weight: 100;
 
     margin-top: 10px;
@@ -58,7 +55,7 @@
 
   &-transcription {
     font-family: 'Roboto', sans-serif;
-    font-size: 17px;
+    font-size: 18px;
     font-weight: 100;
 
     margin-top: 5px;
@@ -71,9 +68,15 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-
   margin-bottom: 100px;
+
+  margin-top: 50px;
   user-select: none;
+
+  &--active {
+    margin-bottom: 15px;
+    margin-top: 0;
+  }
 
   &-button {
     font-family: 'Roboto', sans-serif;
@@ -121,7 +124,7 @@
 }
 
 .AudioCallPage__next {
-  border: 1px solid;
+  border: 1px solid rgb(148, 20, 14);
   border-radius: 4px;
   color: rgb(148, 20, 14);
   font-family: 'Roboto', sans-serif;
