RSL-57: add disabling hard button

--- a/src/components/VoteButtonsPanel/VoteButtonsPanel.module.scss
+++ b/src/components/VoteButtonsPanel/VoteButtonsPanel.module.scss
@@ -5,19 +5,12 @@
 
   background-color: $white-color-transparent;
   border-radius: 5px;
-  // left: 50%;
   left: calc(50% - 150px);
-
-  // max-width: 300;
   position: absolute;
   top: -30px;
-  // transition: opacity 1s;
   z-index: 4;
 
-  // &__show {
-  //   left: calc(50% - 150px);
-  //   max-width: 300px;
-  //   opacity: 1;
-  //   z-index: 5;
-  // }
+  @media (max-width: 360px) {
+    left: calc(50% - 130px);
+  }
 }
