RSL-60: fix position style

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -5,8 +5,12 @@
   min-height: 100%;
 
   &-component {
+    align-items: center;
+    display: flex;
     flex: 1 0 auto;
-    width: 100%;
+    justify-content: center;
+    min-height: 620px;
     position: relative;
+    width: 100%;
   }
 }
