--- a/src/components/GameStartScreen/GameStartScreen.module.scss
+++ b/src/components/GameStartScreen/GameStartScreen.module.scss
@@ -1,7 +1,8 @@
 .GameStartScreen {
   background-image: url('../../img/WhiteModernBackground.jpg');
   background-size: 100% 100%;
-  height: 70vh;
+  height: 100%;
+  position: absolute;
   width: 100%;
 
   &__wrapper {
