--- a/src/pages/OnwGamePage/OnwGamePage.module.scss
+++ b/src/pages/OnwGamePage/OnwGamePage.module.scss
@@ -2,8 +2,9 @@
   align-items: center;
   background: url('../../img/batthern.png');
   display: flex;
-  height: 90vh;
+  height: 91vh;
   justify-content: center;
+  width: inherit;
 }
 
 .Card {
