--- a/src/components/GameStartScreen/GameStartScreen.module.scss
+++ b/src/components/GameStartScreen/GameStartScreen.module.scss
@@ -5,6 +5,11 @@
   position: absolute;
   width: 100%;
 
+  &-levels {
+
+    justify-content: center;
+  }
+
   &__wrapper {
     display: flex;
     flex-direction: column;
@@ -29,7 +34,8 @@
     margin: 0 20px;
   }
 
-  &__button {
+  &-button {
+    margin-right: 10px;
     text-decoration: none;
   }
 
