--- a/src/pages/SettingsPage/SettingsPage.module.scss
+++ b/src/pages/SettingsPage/SettingsPage.module.scss
@@ -1,10 +1,11 @@
 .Settings {
   display: flex;
   flex-direction: column;
-  margin: 0 30px 30px;
+  margin: 20px 0;
+  width: 100%;
 
   &__wrapper {
-    margin: 0 auto;
+    margin: 0 auto 20px;
     max-width: 1200px;
     width: 80%;
   }
@@ -23,5 +24,9 @@
 
   &__hint {
     max-width: 300px;
+  }
+
+  &-column {
+    min-width: 440px;
   }
 }
