RSL-58: fix structure details

--- a/src/components/Details/Details.module.scss
+++ b/src/components/Details/Details.module.scss
@@ -1,19 +1,19 @@
 .Accordion {
- padding-left: 10px;
-}
+  padding-left: 10px;
 
-.Accordion__list-tittle {
-  margin-left: 10px;
-}
+  &__list-tittle {
+    margin-left: 10px;
+  }
 
-.Accordion__list {
-  margin-left: 40px;
-}
+  &__list {
+    margin-left: 40px;
+  }
 
-.AccordionHeader {
-  font-weight: bold;
-}
+  &__header {
+    font-weight: bold;
+  }
 
-.Accordion__paragrap {
-  text-align: justify;
+  &__paragrap {
+    text-align: justify;
+  }
 }
