--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -7,19 +7,18 @@
   &__container {
     background-color: $white-color;
     box-shadow: 0 -1px 6px rgba(13, 16, 61, 0.6);
-    height: 70px;
+    height: 60px;
     position: relative;
   }
 
   &__link-rs {
     align-items: center;
     display: flex;
-    margin-left: 20px;
+    margin-right: 10px;
     text-decoration: none;
   }
 
   &__header-rs {
     color: $black-color;
-    margin-left: 10px;
   }
 }
