--- a/src/pages/PromoPage/PromoPage.module.scss
+++ b/src/pages/PromoPage/PromoPage.module.scss
@@ -29,4 +29,14 @@
     margin: 0 auto;
     max-width: 600px;
   }
+
+  &__wrapper-icon-link {
+    height: max-content;
+    margin: 0 auto;
+    width: max-content;
+  }
+
+  &__img-git {
+    background-size: cover;
+  }
 }
