--- a/src/components/Details/Details.module.scss
+++ b/src/components/Details/Details.module.scss
@@ -16,3 +16,11 @@
     width: 400px;
   }
 }
+
+@media (max-width: 500px) {
+  .Accordion__chartWords {
+    height: 200px;
+    margin: 5px 5px 5px 0;
+    width: 250px;
+  }
+}
