--- a/src/components/SavannaAnswers/SavannaAnswers.module.scss
+++ b/src/components/SavannaAnswers/SavannaAnswers.module.scss
@@ -1,8 +1,8 @@
 .answer__wrapper {
   left: 50%;
   position: absolute;
-  top: 100px;
-  transform: translate(-50%, -50%);
+  top: 50%;
+  transform: translateX(-50%);
 
   @media (max-width: 700px) {
     top: 200px;
